--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lynexer/mysql-model-wrapper/issues"
   },
-  "homepage": "https://github.com/lynexer/mysql-model-wrapper#readme"
+  "homepage": "https://github.com/lynexer/mysql-model-wrapper#readme",
+  "dependencies": {
+    "mysql2": "^3.9.2"
+  }
 }
