--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/lynexer/mysql-model-wrapper#readme",
   "dependencies": {
     "mysql2": "^3.9.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
