--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "mysql2": "^3.9.2"
     },
     "devDependencies": {
-        "prettier": "^3.2.5"
+        "@types/node": "^20.11.22",
+        "prettier": "^3.2.5",
+        "typescript": "^5.3.3"
     }
 }
