build: Updated tsconfig to skip library checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "moduleResolution": "Node",
         "removeComments": false,
         "isolatedModules": true,
-        "outDir": "build/"
+        "outDir": "build/",
+        "skipLibCheck": true
     },
     "exclude": ["node_modules"],
     "include": ["src/"]
