--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "devDependencies": {
         "@types/node": "^20.11.22",
         "prettier": "^3.2.5",
+        "rimraf": "^5.0.5",
         "typescript": "^5.3.3"
     }
 }
