--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "README.md"
     ],
     "scripts": {
-        "build": "npx tsc"
+        "build": "rimraf build && tsc"
     },
     "repository": {
         "type": "git",
